@@ -42,6 +42,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Auto-select the `StreamField` block when only one block type is declared (Sébastien Corbin)
  * Add support for more [advanced Draftail customisation APIs](extending_the_draftail_editor_advanced) (Thibaud Colas)
  * Add the ability to export snippets listing via `SnippetViewSet.list_export` (Sage Abdullah)
+ * Add support for adding [HTML `attrs`](panels_attrs) on `FieldPanel`, `FieldRowPanel`, `MultiFieldPanel`, and others (Aman Pandey, Antoni Martyniuk, LB (Ben) Johnston)
 
 ### Bug fixes
 
