@@ -18,6 +18,7 @@ Changelog
  * Auto-select the `StreamField` block when only one block type is declared (Sébastien Corbin)
  * Add support for more advanced Draftail customisation APIs (Thibaud Colas)
  * Add the ability to export snippets listing via `SnippetViewSet.list_export` (Sage Abdullah)
+ * Add support for adding HTML `attrs` on `FieldPanel`, `FieldRowPanel`, `MultiFieldPanel`, and others (Aman Pandey, Antoni Martyniuk, LB (Ben) Johnston)
  * Fix: Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
  * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
